--- a/3.MachineLearning.ipynb
+++ b/3.MachineLearning.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "4     low  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "array(['low', 'medium', 'high'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -301,61 +301,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9616</th>\n",
+       "      <th>2214</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3485</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3192</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4701</th>\n",
+       "      <th>8166</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8215</th>\n",
+       "      <th>11404</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6543</th>\n",
+       "      <th>5483</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1757</th>\n",
+       "      <th>545</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10771</th>\n",
+       "      <th>6336</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6360</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1043</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10821</th>\n",
-       "      <td>0</td>\n",
+       "      <th>8439</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1788</th>\n",
+       "      <th>5906</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -366,19 +366,19 @@
       ],
       "text/plain": [
        "       high  low  medium\n",
-       "9616      0    1       0\n",
-       "3485      0    0       1\n",
-       "3192      1    0       0\n",
-       "4701      0    1       0\n",
-       "8215      0    0       1\n",
-       "6543      0    0       1\n",
-       "1757      0    1       0\n",
-       "10771     0    0       1\n",
-       "10821     0    0       1\n",
-       "1788      0    1       0"
+       "2214      0    1       0\n",
+       "8166      0    1       0\n",
+       "11404     0    0       1\n",
+       "5483      0    0       1\n",
+       "545       0    1       0\n",
+       "6336      0    1       0\n",
+       "6360      1    0       0\n",
+       "1043      0    0       1\n",
+       "8439      0    1       0\n",
+       "5906      0    1       0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "4     low     0    1       0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "       'IT', 'product_mng', 'marketing', 'RandD'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,77 +573,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        0\n",
-       "1        0\n",
-       "2        0\n",
-       "3        0\n",
-       "4        0\n",
-       "5        0\n",
-       "6        0\n",
-       "7        0\n",
-       "8        0\n",
-       "9        0\n",
-       "10       0\n",
-       "11       0\n",
-       "12       0\n",
-       "13       0\n",
-       "14       0\n",
-       "15       0\n",
-       "16       0\n",
-       "17       0\n",
-       "18       0\n",
-       "19       0\n",
-       "20       0\n",
-       "21       0\n",
-       "22       0\n",
-       "23       0\n",
-       "24       0\n",
-       "25       0\n",
-       "26       0\n",
-       "27       0\n",
-       "28       1\n",
-       "29       1\n",
-       "        ..\n",
-       "11961    8\n",
-       "11962    1\n",
-       "11963    1\n",
-       "11964    6\n",
-       "11965    6\n",
-       "11966    5\n",
-       "11967    8\n",
-       "11968    8\n",
-       "11969    8\n",
-       "11970    0\n",
-       "11971    0\n",
-       "11972    0\n",
-       "11973    0\n",
-       "11974    0\n",
-       "11975    0\n",
-       "11976    0\n",
-       "11977    6\n",
-       "11978    7\n",
-       "11979    7\n",
-       "11980    7\n",
-       "11981    7\n",
-       "11982    6\n",
-       "11983    6\n",
-       "11984    5\n",
-       "11985    5\n",
-       "11986    5\n",
-       "11987    5\n",
-       "11988    5\n",
-       "11989    8\n",
-       "11990    6\n",
-       "Name: department, Length: 11991, dtype: int64"
+       "5085     3\n",
+       "10376    5\n",
+       "2027     4\n",
+       "3931     4\n",
+       "10440    7\n",
+       "Name: department, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,12 +596,12 @@
     "hr_department= hr2['department'].replace(['sales', 'accounting', 'hr', 'technical', 'support', 'management','IT', 'product_mng', 'marketing', 'RandD'], \n",
     "                                  [0,1,2,3,4,5,6,7,8,9],#new values\n",
     "                                 inplace = False) #it will be modified in place\n",
-    "hr_department"
+    "hr_department.sample(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -812,7 +756,7 @@
        "4     low     0    1       0                   0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +910,7 @@
        "4       0                   0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +950,7 @@
        " 'department_numeric']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +982,7 @@
        " 'left']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1136,7 @@
        "4       0                   0     1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,16 +1229,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>satisfaction_level</th>\n",
+       "      <th>last_evaluation</th>\n",
+       "      <th>number_project</th>\n",
+       "      <th>average_montly_hours</th>\n",
+       "      <th>time_spend_company</th>\n",
+       "      <th>work_accident</th>\n",
+       "      <th>promotion_last_5years</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>medium</th>\n",
+       "      <th>department_numeric</th>\n",
+       "      <th>left</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>2</td>\n",
+       "      <td>157</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>5</td>\n",
+       "      <td>262</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>7</td>\n",
+       "      <td>272</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>5</td>\n",
+       "      <td>223</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>2</td>\n",
+       "      <td>159</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   satisfaction_level  last_evaluation  number_project  average_montly_hours  \\\n",
+       "0                0.38             0.53               2                   157   \n",
+       "1                0.80             0.86               5                   262   \n",
+       "2                0.11             0.88               7                   272   \n",
+       "3                0.72             0.87               5                   223   \n",
+       "4                0.37             0.52               2                   159   \n",
+       "\n",
+       "   time_spend_company  work_accident  promotion_last_5years  high  low  \\\n",
+       "0                   3              0                      0     0    1   \n",
+       "1                   6              0                      0     0    0   \n",
+       "2                   4              0                      0     0    0   \n",
+       "3                   5              0                      0     0    1   \n",
+       "4                   3              0                      0     0    1   \n",
+       "\n",
+       "   medium  department_numeric  left  \n",
+       "0       0                   0     1  \n",
+       "1       1                   0     1  \n",
+       "2       1                   0     1  \n",
+       "3       0                   0     1  \n",
+       "4       0                   0     1  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_numeric.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1390,7 @@
        "(11991, 12)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -1329,7 +1416,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1414,6 +1501,13 @@
     "plt.figure(figsize=(10,10))\n",
     "plt.scatter(X[:,0],X[:,1],X[:2],c=y,cmap=\"rainbow\",alpha=0.4)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph shows in red the 3 clusters that I got in R exercise obtained using Elbow Method (see step 2.DataMining_R)"
    ]
   },
   {
