adding Random Forest Results

--- a/3.MachineLearning.ipynb
+++ b/3.MachineLearning.ipynb
@@ -1802,12 +1802,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From now on, I will use only this 5 variables and drop the less important variables out of the model"
+    "### From now on, I will use only this 5 variables and drop the less important variables out of the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1829,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1851,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Looking for the best accuracy, I will analyse some prediction models \n",
+    "###  _K-nearest Neighbors_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dsc/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/forest.py:453: UserWarning: Some inputs do not have OOB scores. This probably means too few trees were used to compute any reliable oob estimates.\n",
+      "  warn(\"Some inputs do not have OOB scores. \"\n",
+      "/home/dsc/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/forest.py:458: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  predictions[k].sum(axis=1)[:, np.newaxis])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=20, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "            oob_score=True, random_state=None, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rclf2=RandomForestClassifier(max_depth=20,oob_score=True)\n",
+    "rclf2.fit(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9788174464181469"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rclf2.oob_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9974734714502274\n",
+      "Precision: 0.9984709480122325\n",
+      "Recall 0.986404833836858\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculating some metrics\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "print(\"Accuracy:\",accuracy_score(y_test,rclf2.predict(x_test))) \n",
+    "print(\"Precision:\",metrics.precision_score(y_test,rclf2.predict(x_test))) #when a model makes a prediction, how often it is correct\n",
+    "print(\"Recall\",metrics.recall_score(y_test,rclf2.predict(x_test))) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Looking for the best accuracy, I will analyse some more prediction models \n",
     "\n",
     "###  _K-nearest Neighbors_"
    ]
@@ -1890,16 +1977,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9552804446690247"
+       "0.9717028802425467"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2074,16 +2161,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predicting results for test dataset\n",
-    "y_pred = dtc.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 191,
    "metadata": {},
    "outputs": [
@@ -2163,16 +2240,6 @@
    ],
    "source": [
     "dtc2.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predicting results for test dataset\n",
-    "y_pred = dtc2.predict(x_test)"
    ]
   },
   {
@@ -2406,15 +2473,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = clf3.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 205,
    "metadata": {},
    "outputs": [
@@ -2438,13 +2496,6 @@
    "metadata": {},
    "source": [
     "## __Gradient Boosting Classifier__ "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### In summary:"
    ]
   },
   {
@@ -2495,16 +2546,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predicting results for test dataset\n",
-    "y_pred = gbc.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 208,
    "metadata": {},
    "outputs": [
@@ -2541,18 +2582,21 @@
    "source": [
     "After having analyzed different models, the results are as follow:\n",
     "\n",
-    "Regarding Accuracy, one metric for evaluating classification models definited as the fraction of predictions our model got right, _Decision Tree_ model has the highest rate followed by Gradient Boosting"
+    "* Regarding __Accuracy__, one metric for evaluating classification models definited as the fraction of predictions that our model got right.\n",
+    "\n",
+    "* Random Forest with a accurace rate ohas the highest rate followed by Gradient Boosting one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RF accuracy: 0.9974734714502274\n",
       "KNN accuracy 0.9717028802425467\n",
       "Dec.Tree accuracy 0.9848408287013644\n",
       "GBC accuracy 0.9805457301667508\n",
@@ -2561,6 +2605,7 @@
     }
    ],
    "source": [
+    "print(\"RF accuracy:\",accuracy_score(y_test,rclf2.predict(x_test))) \n",
     "print(\"KNN accuracy\",accuracy_score(y_test,clf1.predict(x_test)))\n",
     "print(\"Dec.Tree accuracy\",accuracy_score(y_test,dtc2.predict(x_test)))\n",
     "print(\"GBC accuracy\",accuracy_score(y_test,gbc.predict(x_test)))\n",
@@ -2568,11 +2613,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "So, to the question: __how often is the classifier correct?__ The answer would be 98,5% so it would be possible to predict is the employees will leave the company or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Regarding __Precision__ and __Recall__, "
+   ]
   },
   {
    "cell_type": "code",
