adding random forest results

--- a/3.MachineLearning.ipynb
+++ b/3.MachineLearning.ipynb
@@ -2584,12 +2584,12 @@
     "\n",
     "* Regarding __Accuracy__, one metric for evaluating classification models definited as the fraction of predictions that our model got right.\n",
     "\n",
-    "* Random Forest with a accurace rate ohas the highest rate followed by Gradient Boosting one."
+    "* Random Forest with a accurace rate of 99.7% has the highest rate followed by Decision Tree and Gradient Boosting."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -2616,7 +2616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, to the question: __how often is the classifier correct?__ The answer would be 98,5% so it would be possible to predict is the employees will leave the company or not."
+    "So, to the question: __how often is the classifier correct?__ The answer would be 99.7% so it if possible to predict is the employees will leave the company or not."
    ]
   },
   {
