--- a/3.MachineLearning.ipynb
+++ b/3.MachineLearning.ipynb
@@ -6,10 +6,8 @@
    "source": [
     "![ML](https://static1.squarespace.com/static/57812963f7e0aba104cde634/t/578133b0ff7c501754eca98b/1517447071341/?format=1500w)\n",
     "\n",
-    "## In this chapter what I am looking for is to predict how employees will behave.  Do they leave the company or stay?\n",
-    "\n",
-    "\n",
-    "## For this, what I will do is to build an employee churn prediction model."
+    "### In this chapter what I am looking for is to predict how employees will behave.  Do they leave the company or stay?\n",
+    "#### For this, what I will do is to build an employee churn prediction model."
    ]
   },
   {
@@ -2584,9 +2582,8 @@
    "source": [
     "After having analyzed different models, the results are as follow:\n",
     "\n",
-    "Regarding __Accuracy__, one metric for evaluating classification models definited as the fraction of predictions that our model got right.\n",
-    "\n",
-    "* Random Forest has the highest rate followed by Decision Tree and Gradient Boosting."
+    "### Accuracy\n",
+    "Regarding __Accuracy__, one metric for evaluating classification models definited as the fraction of predictions that our model got right. "
    ]
   },
   {
@@ -2618,6 +2615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Random Forest has the highest rate followed by Decision Tree and Gradient Boosting.\n",
     "* So, to the question: __how often is the classifier correct?__ The answer would be 99% so it if possible to predict is the employees will leave the company or not."
    ]
   },
@@ -2625,6 +2623,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Precision\n",
+    "\n",
     "Regarding __Precision__, also called positive predictive value, is the fraction of relevant instances among the retrieved instances.  _Source_: [https://en.wikipedia.org/wiki/Precision_and_recall]. In other words, what proportion of positive identifications was actually correct."
    ]
   },
@@ -2662,6 +2662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Recall\n",
     "Finally, focus on __Recall__ (also known as sensitivity) is the fraction of relevant instances that have been retrieved over the total amount of relevant instances. _Source_:[https://en.wikipedia.org/wiki/Precision_and_recall]. \n",
     "\n",
     "It basically means, recall means how many of the true positives were recalled (found)"
