--- a/0.DataScrubbing.ipynb
+++ b/0.DataScrubbing.ipynb
@@ -3593,7 +3593,7 @@
     "* Satisfaction level has the highest correlation level with the fact of leaving the company. I could  check that most people who are not happy in the company give up their work, but there are employees who, even when they are happy, also do it (probably because they found a better job).\n",
     "\n",
     "\n",
-    "* Surprisingly, HR is the department with the highest turnover rate (19%) , followed by Sales Support and Technical, which count the highest number of employees. \n",
+    "* Surprisingly, HR is the department with the highest turnover rate (19%). However Sales, Support and Technical departments count with the highest number of employees left the company. \n",
     "\n",
     "\n",
     "* Salary seems to be a powerful reason for quitting the job. Salaries are lower in people who left (most people had low and medium salary). The lower salary the greater the turnover rate.\n",
@@ -3612,7 +3612,7 @@
     "* During the first two years of experience employees barely leave the company. Most of them quit their job around the 4-5  year. From 6 year, it is very unlikely that the employee will leave. Probably the workers had a greater commitment to the company and its values.\n",
     "\n",
     "\n",
-    "* Finally, analysing the work accidents, there doesn't seem to be a relationship between the number of accidents and leaving the job.\n",
+    "* Finally, analysing the work accidents, there doesn't seem to be a relationship between the number of accidents and quit the job.\n",
     "\n",
     "\n",
     "__Next Steps:__\n",
