--- a/1. Visualizations.Rmd
+++ b/1. Visualizations.Rmd
@@ -4,9 +4,12 @@ output: html_document
 ---
 ## -------------------------------------------------------------------------
 ####             TFM - REASONS FOR TURNOVER EMPLOYEES -
+
+https://github.com/MariaGamero/TFM-ReasonsforEmployeeTurnover
+
 ## -------------------------------------------------------------------------
 
-### 1.1. Import libraries #####
+### 1.1 Import libraries #####
 ```{r echo = FALSE, warning = FALSE}
 if (!require("ggplot2")){
   install.packages("ggplot2")
@@ -22,7 +25,7 @@ hr_data <- read.csv("data/HR_data_cleaned.csv",stringsAsFactors = FALSE)
 
 
 ## -------------------------------------------------------------------------
-### 1.3. Quick review of the dataSet #####
+### 1.3. Quick review of the dataset #####
 
 ```{r}
 str(hr_data)
@@ -59,7 +62,6 @@ ggplot(hr_data,aes(x=salary, fill=salary))+
   facet_grid(left~department)+
   theme(legend.position="right")+
   xlab("Salary level ")+ ylab("Number of Employees")+
-  ggtitle("Graph 1. Employees by salary range")+
   scale_fill_manual(values = c('orange1', 'lightblue1', 'darkblue'))+
   theme(axis.text.x = element_text(angle = 50, hjust = 1))
 ```
@@ -118,7 +120,7 @@ __Conclusions:__
   + Most of the employees who stay in the company have been working for three years
  
 ## -------------------------------------------------------------------------
-#### 1.5.4.- Time spent at the company working (monthly)
+#### 1.5.4.- Average monthly hours worked
 
 ```{r echo = FALSE, warning = FALSE}
 ggplot(hr_data, aes(average_montly_hours)) +
@@ -134,7 +136,7 @@ __Conclusions:__
  + During the first two years of experience, employees barely leave the company. After that, the proportion of people         leaving the company is older and older. As the employees experience grows and passed the 6 year, they stop leaving.
 
 ## -------------------------------------------------------------------------
-#### 1.5.5.- Number of projects done by employee
+#### 1.5.5.- Number of Projects done by employee
 
 ```{r echo = FALSE, warning = FALSE}
 ggplot(hr_data,aes(x=number_project,fill=left))+
@@ -163,7 +165,7 @@ ggplot(hr_data,aes(x=last_evaluation))+
 
 __Conclusions:__
 
- + Those employees with a performance level between 0.6 and 0.8  remained in the company.However, both employees with performance level greater than 0.8 and employees with performance level below 0.6, tended to leave more of the company. 
+ + Those employees with a performance level between 0.6 and 0.8  remained in the company. However, both employees with performance level greater than 0.8 and employees with performance level below 0.6, tended to leave more of the company. 
  
 ## -------------------------------------------------------------------------
 #### 1.5.7.- Performance distribution by employee & department
